# pinns-stochastic-inflation

./: LICENSE  README.md  code_gpt.md  prompt.md  pyproject.toml
src/fp_pinn_tests/: pinn_fokker_planck_diffusion_1d.ipynb  pinn_stochastic_inflation.ipynb
