[project]
name = "pinns_stochastic_inflation"
version = "0.1.0"
description = "Application of Physics Informed Neural Networks (PINNs) to Stochastic Inflation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.10.0",
]
